--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
     <h1>window.nostrdb.js</h1>
     <p>Open the console to see the results.</p>
 
-    <script>
+    <script type="module">
       const count = await window.nostrdb.count([{ kinds: [1] }]);
       console.log(count);
 
